<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="7dp" >

    <CheckBox
        android:id="@+id/only_one_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/only_one_item" />

    <CheckBox
        android:id="@+id/filter_listed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_listed" />

    <CheckBox
        android:id="@+id/filter_exclude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_exclude" />
    
    <CheckBox
        android:id="@+id/disable_new_folder_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disable_new_folder_button" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/choice_type"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/choice_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/choice_type_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/choice_type_all" />

        <RadioButton
            android:id="@+id/choice_type_files"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice_type_files" />

        <RadioButton
            android:id="@+id/choice_type_directories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice_type_directories" />
    </RadioGroup>

    <Button
        android:id="@+id/choose_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="21dp"
        android:text="@string/choose_files" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
